# magpie

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/systemd/: magpie.service
src/: Arguments.cc  Arguments.h  CMakeLists.txt  Interface.cc  Interface.h  Logger.h  LoggerFormatter.h  NDP.cc  NDP.h  NeighborSolicitation.cc  NeighborSolicitation.h  Queue.h  RequestManager.cc  RequestManager.h  RouteManager.cc  RouteManager.h  Sniffer.cc  Sniffer.h  Utils.cc  Utils.h  main.cc
src/common/ArgumentParser/: ArgumentParser.cc  ArgumentParser.h
src/common/Ensure/: Ensure.cc  Ensure.h
src/common/TerminalColor/: TerminalColor.h
